# COS40005-Intrusion-Detection-System

./: .gitignore  Cargo.toml  Install.sh  README.md  config.ini  hash  install.sh  test
documentation/: fim-file_integrity_monitoring  fim-file_integrity_monitoring.md  releaseNotes.md
hcm/: Cargo.toml  kgh  temp_file.txt
hcm/src/: main.rs
src/: AnalysisModules.rs  LaraCore.rs  analysis_modules.rs  lara_core.rs  linux_bridge.rs  main.rs  test  testing.rs
src/AnalysisModules/: Authentication.rs  Example.rs  anomaly_dection.rs  example.rs  fim.rs  network.rs  packet_sniffer.rs
src/HashCrypt/: Crypt.rs  Hash.rs
src/LaraCore/: CoreEnums.rs  CoreStruts.rs  CoreTraits.rs
src/analysis_modules/: anomaly_dection.rs  anomaly_detection.rs  authentication.rs  example.rs  fim.rs  httpserver.rs  network.rs  packet_sniffer.rs
src/lara_core/: core_enums.rs  core_structs.rs  core_traits.rs
src/linux_bridge/: auth.rs  linux.rs  linuxauthbridge.rs  linuxsysbridge.rs  mod.rs  network.rs  sam.rs  system.rs
src2/: Cargo.toml
