[package]
name = "Chromia"
version = "0.3.1"
edition = "2021"

[dependencies]
# Testing
rand = "0.7.0"
#Core
colored="2.1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.5.4"

# System Info
chrono = "0.4"
sysinfo = "0.31.2"
nix = "0.23.0"
byteorder = "1.4"
whoami = "1.2"
users = "0.11"
notify = "5.1" 
dirs = "4.0"


# Networking
port_scanner = "0.1.5"
rust-ini = "0.21.1"
serde_json = "1.0.127"

[dependencies.pnet]
version = "0.35.0"

# New dependencies for AnomalyDetector
colored = "2.0"
audit = "0.3"

